# wfc_web

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
front/: package-lock.json  package.json
front/src/: App.svelte  app.css
front/src/components/: categories_modal.svelte  categories_sync.svelte  category_row.svelte  category_selector.svelte  generate_modal.svelte  header.svelte  tile_card.svelte  tile_selector.svelte  tile_splicer.svelte  upload_modal.svelte
front/src/lib/: socketio.js  tile.js  utils.js
front/src/stores/: categories_store.js  gen_state_store.js  image_store.js  tiles_store.js
front/src/ui/: button.svelte
frontend/: package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/components/: ResultViewer.svelte  control_pane.svelte  grid_canvas.svelte  image_loader.svelte  options.svelte  tile_selector.svelte  workbench.svelte
frontend/src/lib/: api.js  create_graph.js  socketio.js  utils.js
frontend/src/stores/: config_store.js  image_store.js
src/: lib.rs  main.rs
src/handlers/: connection.rs  events.rs  mod.rs  task_queue.rs
src/models/: mod.rs  wfc.rs
src/services/: mod.rs  wfc.rs  wfc2.rs
src/utils/: mod.rs
