[package]
name = "wfc_web"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wfc_web"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-unknow-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
socketioxide = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version="0.5", features = ["fs", "cors"] }
rand = "0.8"

[built-dependencies]




